--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	.markdown-container {
+		@apply mb-8;
+	}
+
+	.markdown-container h1 {
+		@apply text-3xl font-bold py-2 my-8;
+	}
+
+	.markdown-container h2 {
+		@apply text-xl font-bold mt-6 mb-2;
+	}
+
+	.markdown-container a {
+		@apply text-link-blue underline;
+	}
+}
