--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
 		@apply text-xl font-bold mt-6 mb-2;
 	}
 
+	.markdown-container h3 {
+		@apply text-base font-bold mt-6 mb-2;
+	}
+
 	.markdown-container p {
 		@apply py-2;
 	}
@@ -27,8 +31,16 @@
 		@apply list-decimal list-inside text-xl font-bold mt-6 mb-2;
 	}
 
-	.markdown-container li {
-		@apply text-xl font-bold mb-6;
+	.markdown-container ol > li {
+		@apply text-xl font-bold mb-2;
+	}
+
+	.markdown-container ul {
+		@apply list-disc list-inside text-xl font-bold mt-6 mb-2;
+	}
+
+	.markdown-container ul > li {
+		@apply text-base font-normal mb-2;
 	}
 
 	.markdown-container li > p:first-child {
