--- a/app/index.css
+++ b/app/index.css
@@ -51,3 +51,28 @@
 		@apply text-base font-normal;
 	}
 }
+
+@layer components {
+	  .spinner {
+		animation: rotate 2s linear infinite !important;
+	  }
+	  .spinner::after {
+		content: "";
+		width: 38px;
+		height: 38px;
+		border: 5px solid rgba(255, 255, 255, 0.8);
+		border-top-color: transparent;
+		border-radius: 50%;
+		animation: loading 1s ease infinite;
+	  }
+	  @keyframes loading {
+		to {
+		  transform: rotate(1turn);
+		}
+	  }
+	  @keyframes rotate {
+		100% {
+		  transform: rotate(360deg);
+		}
+	  }
+}
